# database

./: .env  .gitignore  README.md  eslintrc.js  package.json  pyproject.toml  tsconfig.json
src/: app.py  index.ts  main.py
src/command/: bible.py  category.py  comment.py  lang.py  religion.py
src/commands/all/: index.ts
src/commands/bible/: mybible.ts
src/config/: main.py
src/data/: langs.py  main.py
src/data/en/: versions.py
src/data/en/catholic/: categories.py
src/data/en/catholic/bible/: bibles.py
src/data/en/protestant/: categories.py
src/data/en/protestant/bible/: bibles.py
src/data/es/: versions.py
src/data/es/catholic/: categories.py
src/data/es/protestant/: categories.py
src/data/langs/: en.toml  es.toml  pt-br.toml
src/data/pt-br/: versions.py
src/data/pt-br/catholic/: categories.py
src/data/pt-br/protestant/: categories.py
src/data/pt-br/protestant/bible/: bibles.py
src/data/pt-br/protestant/bible/biblia-livre-texto-critico/: info.toml
src/data/pt-br/protestant/bible/biblia-livre-texto-recebido/: info.toml
src/data/religions/: catholic.toml  protestant.toml
src/helper/: build.py  filesystem.py
